[project]
name = "lifelink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.3",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "twilio>=9.9.1",
    "uvicorn>=0.40.0",
]
